# TRT-main

./: .cursorrules  .dockerignore  .gitignore  AUDIT_RESULT.json  CHANGELOG.md  COMPLETE_FIXES.py  CONTRIBUTING.md  CURSOR_INTEGRATION.txt  CYCLE_8_EMERGENCY_HOTFIX.md  CYCLE_9_PHASE_2_TASKS.md  CYCLE_9_TELEMETRY_INTEGRATION.md  DEPLOY_CHECKLIST.md  DEPLOY_VERIFY.sh  Dockerfile  Dockerfile.optimized  E2E_DELIVERY_SUCCESS.txt  FINAL_INSTRUCTION.txt  FINAL_PRODUCTION_STATUS.txt  FINAL_SUMMARY_RU.txt  FIXED_HANDLERS_COMPLETE.py  INTEGRATION_EXAMPLES.py  MODELS_NEED_MANUAL_MAPPING.txt  MODELS_READINESS_REPORT.txt  Makefile  PR_OPS_OBSERVABILITY.md  README.md  README_AUTO_FIX.txt  README_UPLOAD.txt  README_ЗАПУСК.txt  README_УСТАНОВКА.txt  SMOKE_QUICK_START.sh  START_HERE.txt  SYSTEM_EXPLANATION.txt  TOP_5_CRITICAL_FIXES.py  TRT_REPORT.md  TRT_REPORT.md.old  TRT_RUNBOOK.md  TRT_SYSTEM.md  add_new_models_from_api.py  advanced_pricing.py  (+255 more)
.cursor/: auto_fix_prompt.md  auto_fix_tasks.json  cursor_state.json  fix_errors_prompt.md
.devcontainer/: devcontainer.json
aiogram/: __init__.py  filters.py  router.py  types.py
app/: __init__.py  bootstrap.py  bot_mode.py  config.py  singleton_lock.py
artifacts/: HEAD_AFTER.txt  HEAD_BEFORE.txt  audits_6_7_8_summary.json  button_test_results.json  buttons_inventory.json  buttons_inventory.md  comprehensive_test_results.json  dry_run_cycle16.json  dry_run_quick_results.json  dry_run_test_results.json  (+23 more)
scanner_app/: pyproject.toml
scanner_app/app/: __init__.py  config.py  extract.py  notify.py  signal.py  storage.py  util.py
(+1276 files in other folders)
